dump files to disk, serve files from server (not dev server), proxy requests to server through /Learner on dev server, but now we can still get WS for live reload via 4200 :thumbsup:

--- a/projects/learner/src/app/app.component.html
+++ b/projects/learner/src/app/app.component.html
@@ -8,6 +8,9 @@
 <h2>Here are some links to help you start: </h2>
 <h3>{{ getStuff() }}</h3>
 <h3>{{ version }}</h3>
+
+<h1>Hey man!!!</h1>
+
 <ul>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
