--- a/projects/learner/src/app/app.component.html
+++ b/projects/learner/src/app/app.component.html
@@ -11,6 +11,10 @@
 
 <h1>Hey man!!!</h1>
 
+<a [routerLink]="['/foo']">foo</a>
+
+<router-outlet></router-outlet>
+
 <ul>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
