turns out you don't have to convert everything to .ts, just make sure to add allowJs: true to your tsconfig

--- a/projects/marvel/app/layout/shell.html
+++ b/projects/marvel/app/layout/shell.html
@@ -3,5 +3,6 @@
     <md-content flex class="content">
         <div ui-view></div>
     </md-content>
+    <nga-foo-bar></nga-foo-bar>
     <nga-copyright></nga-copyright>
 </div>
