--- a/projects/marvel/styles.scss
+++ b/projects/marvel/styles.scss
@@ -2,6 +2,8 @@
 @import "toastr/build/toastr.css";
 @import "components-font-awesome/css/font-awesome.css";
 
+@import './app/app-styles.scss';
+
 .md-icon-button img {
   width: 24px;
   height: 24px;
