component from common directory

--- a/projects/marvel/app/layout/shell.html
+++ b/projects/marvel/app/layout/shell.html
@@ -2,7 +2,8 @@
     <nga-topnav></nga-topnav>
     <md-content flex class="content">
         <div ui-view></div>
-    </md-content>
+		</md-content>
+		<lib-common></lib-common>
     <nga-foo-bar></nga-foo-bar>
     <nga-copyright></nga-copyright>
 </div>
