reorganize marvel app for 'pre-migration'

--- a/projects/marvel/src/styles.scss
+++ b/projects/marvel/src/styles.scss
@@ -2,7 +2,7 @@
 @import "toastr/build/toastr.css";
 @import "components-font-awesome/css/font-awesome.css";
 
-@import './app/app-styles.scss';
+@import '../angular-js/app-styles.scss';
 
 .md-icon-button img {
   width: 24px;
